--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         }
 
         CsvToHtmlTable.init({
-            csv_path: "data/Health Clinics in Chicago.csv",
+            csv_path: "data/sighi.csv",
             element: "table-container",
-            allow_download: true,
+            allow_download: false,
             csv_options: {
                 separator: ",",
                 delimiter: '"'
@@ -67,7 +67,6 @@
                 paging: false
             },
             custom_formatting: [
-                [4, format_link]
             ]
         });
     </script>
